# artifacts/api-server/src/routes/index.ts
@@ -1,14 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
+import chatRouter from "./chat";
 import videosRouter from "./videos";
-import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(authRouter);
+router.use(chatRouter);
 router.use(videosRouter);
-router.use(adminRouter);
 
 export default router;
